test/lit/vmi_new/vmi_vexpdif_max_type_invalid.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --emit-pto-ir %s 2>&1 | FileCheck %s

// vexpdif: max element type must be f32 (hardware constraint).

module {
  func.func @vexpdif_max_not_f32(
      %x: !pto.vmi.vreg<64xf32>,
      %max: !pto.vmi.vreg<64xf16>,
      %mask: !pto.vmi.mask<64xpred>)
      -> !pto.vmi.vreg<64xf32> {
    // CHECK: error: 'pto.vmi.vexpdif' op requires max element type to be f32
    %r = pto.vmi.vexpdif %x, %max, %mask
        : !pto.vmi.vreg<64xf32>, !pto.vmi.vreg<64xf16>, !pto.vmi.mask<64xpred> -> !pto.vmi.vreg<64xf32>
    return %r : !pto.vmi.vreg<64xf32>
  }
}
